Fixed bugs in ProductReviewController, ReviewService,openAPI.yaml 🤮
